--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Help Them</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="half-width">
+            <h1> Their lives depend on your donation</h1>
+            <p>Making a Planned Gift through a Bequest in a Will or Trust, using Life Insurance or by a Named
+                Beneficiary
+                Designation is a wonderful way to leave a lasting and life-saving legacy.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/"> How to
+                Contribute </a>
+        </div>
 
+        <div class="half-width">
+            <img src="images/donation0.jpg" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
