--- a/index.html
+++ b/index.html
@@ -13,7 +13,73 @@
 </head>
 
 <body>
+    <section class="background-image">
+        <div>
+            <h1>Let's Help Those Who Are More In Need</h1>
+            <p>Making a Planned Gift through a Bequest in a Will or Trust, using Life Insurance or by a Named
+                Beneficiary
+                Designation is a wonderful way to leave a lasting and life-saving legacy.</p>
+            <a class="link-button"> Donate now</a>
+        </div>
+    </section>
     <section>
+        <h1> Donaate Today </h1>
+        <p>Making a Planned Gift through a Bequest in a Will or Trust, using Life Insurance or by a Named
+            Beneficiary
+            Designation is a wonderful way to leave a lasting and life-saving legacy.</p>
+        <div class="tk-amount">
+            <button>100tk</button>
+            <button>200tk</button>
+            <button>300tk</button>
+            <button>400tk</button>
+            <button>500tk</button>
+        </div>
+        <div>
+            <a class="link-button"> Donate now</a>
+        </div>
+    </section>
+    <section class="Our Donate Plan">
+        <h1>Our Donate Plan</h1>
+        <p>Making a Planned Gift through a Bequest in a Will or Trust, using Life Insurance or by a Named
+            Beneficiary
+            Designation is a wonderful way to leave a lasting and life-saving legacy.</p>
+        <div>
+            <div class="flxible-containe">
+                <div>
+                    <img src="icons/food.png" alt="">
+                    <div class="Our-Donate-Plan">
+                        <h4>Food for a family</h4>
+                        <p>The Australian Government has now officially listed koalas as an endangered species in
+                            Queensland,
+                            New
+                            South Wales, and the Australian Capital Territory.</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="icons/shelter.png" alt="">
+                    <div class="Our-Donate-Plan">
+                        <h4> shelter for a family</h4>
+                        <p>The Australian Government has now officially listed koalas as an endangered species in
+                            Queensland,
+                            New
+                            South Wales, and the Australian Capital Territory.</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="icons/Frame-1.png" alt="">
+                    <div class="Our-Donate-Plan">
+                        <h4> education for a child</h4>
+                        <p>The Australian Government has now officially listed koalas as an endangered species in
+                            Queensland,
+                            New
+                            South Wales, and the Australian Capital Territory.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="flxible-containe">
         <div class="half-width">
             <h1> Their lives depend on your donation</h1>
             <p>Making a Planned Gift through a Bequest in a Will or Trust, using Life Insurance or by a Named
@@ -27,6 +93,20 @@
             <img src="images/donation0.jpg" alt="">
         </div>
     </section>
+    <div>
+        <h1> Get my Update </h1>
+        <p>Your IRA plan administrator can help you make a gift from your IRA to PROLIFE Across AMERICA.</p>
+    </div>
+    <div>
+        <input type="text" placeholder="Email Address">
+        <button>subscribe-button</button>
+    </div>
 </body>
+<footer>
+    <div>
+        <h4 class="Adjective"> Be Humble </h4>
+    </div>
+    <p>I don't know how much I've achieved. But I tritd dmy best.</p>
+</footer>
 
 </html>
